--- a/katalog.html
+++ b/katalog.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="stylesheets2/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Каталог</title>
     <style media="screen">
     body::before {
@@ -49,7 +51,7 @@
       font-size: 25px;
       position: absolute;
       left: 536px;
-      top: 21px;
+      top: 45px;
       color: #000000;
     }
     .p2 {
@@ -57,7 +59,7 @@
       font-size: 25px;
       position: absolute;
       left: 716px;
-      top: 21px;
+      top: 45px;
       color: #000000;
     }
     .p3 {
@@ -65,7 +67,7 @@
       font-size: 25px;
       position: absolute;
       left: 891px;
-      top: 21px;
+      top: 45px;
       color: #000000;
     }
     .p4 {
@@ -73,13 +75,13 @@
       font-size: 25px;
       position: absolute;
       left: 1056px;
-      top: 21px;
+      top: 45px;
       color: #000000;
     }
     .p5 {
       position: absolute;
       left: 88px;
-      top: 100px;
+      top: 148px;
       font-family: Polonium;
       font-size: 40px;
       letter-spacing: 0.1em;
