--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <a href="kontakti.html"><p class="p4">контакты</p></a>
     <div class="reklama">
       <p class = "p0">Новые очки<br>для занятий спортом</p>
+      <p class = "px">Новый вид галлюцинаций, с которым занятия спортом станут интереснее!</p>
     </div>
     <div class="kr1"></div>
     <div class="kr2">
