--- a/kontakti.html
+++ b/kontakti.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mailtoharshit/San-Francisco-Font-/sanfrancisco.css">
+    <link rel="stylesheet" href="stylesheets4/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Контакты</title>
     <style media="screen">
@@ -12,7 +12,7 @@
         left: 0;
         top: 0;
         right: 0;
-        /* background: url('images/k1280.png'); */
+        background: url('images/k1280.png');
         background-size: 100% auto;
         background-repeat: no-repeat;
         /* height: 100%; */
@@ -21,87 +21,7 @@
         display: block;
         opacity: .5;
       }
-      body {
-        width: 100%;
-        margin: 0 auto;
-        background: #F6F6F6;;
-        height: 850px;
-        display: block;
-        position: absolute;
-      }
-      .mirage {
-        background: url('images/mirage1280.png');
-        width: 264px;
-        height: 60px;
-        background-repeat: no-repeat;
-        position: absolute;
-        left: 88px;
-        top: 40px;
-      }
-      .kv0 {
-        background-color: #EDF060;
-        position: absolute;
-        width: 124px;
-        height: 33px;
-        top: 45px;
-        left: 1054px;
-      }
-      .p1 {
-        font-family: Montserrat;
-        font-size: 25px;
-        position: absolute;
-        left: 536px;
-        top: 21px;
-        color: #000000;
-      }
-      .p2 {
-        font-family: Montserrat;
-        font-size: 25px;
-        position: absolute;
-        left: 716px;
-        top: 21px;
-        color: #000000;
-      }
-      .p3 {
-        font-family: Montserrat;
-        font-size: 25px;
-        position: absolute;
-        left: 891px;
-        top: 21px;
-        color: #000000;
-      }
-      .p4 {
-        font-family: Montserrat;
-        font-size: 25px;
-        position: absolute;
-        left: 1056px;
-        top: 21px;
-        color: #000000;
-      }
-      .p5 {
-        position: absolute;
-        left: 88px;
-        top: 100px;
-        font-family: Polonium;
-        font-size: 40px;
-        letter-spacing: 0.1em;
-      }
-      .karta {
-        position: absolute;
-        width: 1104px;
-        height: 442px;
-        left: 88px;
-        top: 238px;
-        border: 4px solid #000000;
-        box-sizing: border-box;
-      }
-      .p6 {
-        position: absolute;
-        left: 88px;
-        top: 700px;
-        font-family: Montserrat;
-        font-size: 20px;
-      }
+
     </style>
   </head>
   <body>
