--- a/katalog.html
+++ b/katalog.html
@@ -33,28 +33,52 @@
     <a href="kontakti.html"><p class="p4">контакты</p></a>
     <p class="p5">Очки</p>
     <div class="t1">
-      <div class="vopros"></div>
+      <div class="popup pop1">
+        <div class="kvx"></div>
+        <div class="kvy">
+          <p class px></p>
+        </div>
+      </div>
+      <div class="vopros vop1"></div>
       <div class="ochki1"></div>
       <div class="cena">
         <p class = "cen">100$</p>
       </div>
     </div>
     <div class="t2">
-      <div class="vopros"></div>
+      <div class="popup pop2">
+        <div class="kvx"></div>
+        <div class="kvy">
+          <p class px></p>
+        </div>
+      </div>
+      <div class="vopros vop2"></div>
       <div class="ochki2"></div>
       <div class="cena">
         <p class = "cen">100$</p>
       </div>
     </div>
     <div class="t3">
-      <div class="vopros"></div>
+      <div class="popup pop3">
+        <div class="kvx"></div>
+        <div class="kvy">
+          <p class px></p>
+        </div>
+      </div>
+      <div class="vopros vop3"></div>
       <div class="ochki3"></div>
       <div class="cena">
         <p class = "cen">100$</p>
       </div>
     </div>
     <div class="t4">
-      <div class="vopros"></div>
+      <div class="popup pop4">
+        <div class="kvx"></div>
+        <div class="kvy">
+          <p class px></p>
+        </div>
+      </div>
+      <div class="vopros vop4"></div>
       <div class="ochki4"></div>
       <div class="cena">
         <p class = "cen">100$</p>
