--- a/katalog.html
+++ b/katalog.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" href="stylesheets2/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Каталог</title>
+    <script type="text/javascript">
+     $(document).ready(function(){
+       $("vop4").click(function(){
+         $(.t4).toggleClass("kvx");
+         $(.t4).toggleClass("kvy");
+         $(.kvy).toggleClass("px");
+       });
+     });
+   </script>
     <style media="screen">
     body::before {
       content: "";
@@ -36,7 +45,7 @@
       <div class="popup pop1">
         <div class="kvx"></div>
         <div class="kvy">
-          <p class px></p>
+          <p class = "px">Галлюцинации добавляют энергию. С&nbsp;такими очками легче заниматься спортом</p>
         </div>
       </div>
       <div class="vopros vop1"></div>
@@ -49,7 +58,7 @@
       <div class="popup pop2">
         <div class="kvx"></div>
         <div class="kvy">
-          <p class px></p>
+          <p class = "px">Вместо  темных тонов видно яркие</p>
         </div>
       </div>
       <div class="vopros vop2"></div>
@@ -62,7 +71,7 @@
       <div class="popup pop3">
         <div class="kvx"></div>
         <div class="kvy">
-          <p class px></p>
+          <p class = "px">Галлюцинации мотивируютс и&nbsp;вдохновляют вас</p>
         </div>
       </div>
       <div class="vopros vop3"></div>
@@ -75,7 +84,7 @@
       <div class="popup pop4">
         <div class="kvx"></div>
         <div class="kvy">
-          <p class px></p>
+          <p class = "px">Вместо людей вы&nbsp;видите милых животных</p>
         </div>
       </div>
       <div class="vopros vop4"></div>
