--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Главная</title>
     <script type="text/javascript">
     $(function() {
-      $('.kr2 a').each(function() {
-    		$(this).on('click', function(e) {
+
+    		$(".s1").on('click', function(e) {
     			e.preventDefault();
     			var scrollTo = $(this).attr('href');
     			var whitespace = scrollTo == '#s1' ? 70 : -10;
@@ -16,7 +16,7 @@
     				scrollTop: $(scrollTo).offset().top - whitespace
     			}, 1000);
     		});
-    	});
+
     });
     </script>
     <!-- <link rel="icon" type="image/x-icon" href="images/logo.ico" />
@@ -55,21 +55,20 @@
       <p class = "px">Новый вид галлюцинаций, с которым занятия спортом станут интереснее!</p>
     </div>
     <div class="kr1"></div>
-    <a href="#kr2"><div class="kr2">
+    <a href="#s1" class = "s1"><div class="kr2">
       <img src="images/st.png" alt="" class = "img1">
     </div></a>
-    <p class="p5" id="kr2">Как работают очки</p>
+    <p class="p5" id="s1">Как работают очки</p>
     <p class="p6">Через очки вы&nbsp;можете видеть различные галлюцинации, как&nbsp;зрительные, так&nbsp;слуховые и&nbsp;обонятельные. Очки помогут отвлечься от&nbsp;скучной жизни
 и&nbsp;окунуться в&nbsp;совершенно новый мир! Вы&nbsp;можете выбрать себе очки
 с&nbsp;определенными видами галлюцинаций. Очки помогают справится
 с&nbsp;трудностями и&nbsp;сделать жизнь проще.</p>
     <p class = "p7">От создания галлюцинаций до новых очков</p>
     <div class="kv1">
-      <div class="gal1">
-      </div>
+      <div class="gal1"></div>
     </div>
     <div class="kv2">
-      <div class="gal2">
+      <div class="gal2"></div>
     </div>
     <p class = "p8">Создай собственные галлюцинации прямо сейчас!</p>
     <div class="kv3"></div>
