--- a/katalog.html
+++ b/katalog.html
@@ -7,8 +7,29 @@
     <title>Каталог</title>
     <script type="text/javascript">
       $(document).ready(function(){
-        $("vop1").click(function(){
-          $(.pop1).toggleClass("dis");
+        $(".vop1").click(function(){
+          $(".pop1").toggleClass("dis");
+        });
+      });
+    </script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $(".vop2").click(function(){
+          $(".pop2").toggleClass("dis");
+        });
+      });
+    </script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $(".vop3").click(function(){
+          $(".pop3").toggleClass("dis");
+        });
+      });
+    </script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $(".vop4").click(function(){
+          $(".pop4").toggleClass("dis");
         });
       });
     </script>
