--- a/katalog.html
+++ b/katalog.html
@@ -10,27 +10,31 @@
         $(".vop1").click(function(){
           $(".pop1").toggleClass("dis");
         });
-      });
-    </script>
-    <script type="text/javascript">
-      $(document).ready(function(){
         $(".vop2").click(function(){
           $(".pop2").toggleClass("dis");
         });
-      });
-    </script>
-    <script type="text/javascript">
-      $(document).ready(function(){
         $(".vop3").click(function(){
           $(".pop3").toggleClass("dis");
         });
-      });
-    </script>
-    <script type="text/javascript">
-      $(document).ready(function(){
         $(".vop4").click(function(){
           $(".pop4").toggleClass("dis");
         });
+        $(".cena").click(function(){
+          $(this).addClass("dis");
+        });
+        $(".c1").click(function(){
+          $(".ct1").removeClass("dis");
+        });
+        $(".c2").click(function(){
+          $(".ct2").removeClass("dis");
+        });
+        $(".c3").click(function(){
+          $(".ct3").removeClass("dis");
+        });
+        $(".c4").click(function(){
+          $(".ct4").removeClass("dis");
+        });
+
       });
     </script>
     <style media="screen">
@@ -63,8 +67,19 @@
     <div class="t1">
       <div class="vopros vop1"></div>
       <div class="ochki1"></div>
-      <div class="cena">
+      <div class="cena c1">
         <p class = "cen">100$</p>
+      </div>
+      <div class="cena2 dis ct1">
+        <div class="cena21">
+          <p class = "pcen">-</p>
+        </div>
+        <div class="cena22">
+          <p class = "pcen">1</p>
+        </div>
+        <div class="cena23">
+          <p class = "pcen">+</p>
+        </div>
       </div>
       <div class="popup pop1 dis">
         <div class="kvx"></div>
@@ -76,8 +91,19 @@
     <div class="t2">
       <div class="vopros vop2"></div>
       <div class="ochki2"></div>
-      <div class="cena">
+      <div class="cena c2">
         <p class = "cen">100$</p>
+      </div>
+      <div class="cena2 dis ct2">
+        <div class="cena21">
+          <p class = "pcen">-</p>
+        </div>
+        <div class="cena22">
+          <p class = "pcen">1</p>
+        </div>
+        <div class="cena23">
+          <p class = "pcen">+</p>
+        </div>
       </div>
       <div class="popup pop2 dis">
         <div class="kvx"></div>
@@ -89,8 +115,19 @@
     <div class="t3">
       <div class="vopros vop3"></div>
       <div class="ochki3"></div>
-      <div class="cena">
+      <div class="cena c3">
         <p class = "cen">100$</p>
+      </div>
+      <div class="cena2 dis ct3">
+        <div class="cena21">
+          <p class = "pcen">-</p>
+        </div>
+        <div class="cena22">
+          <p class = "pcen">1</p>
+        </div>
+        <div class="cena23">
+          <p class = "pcen">+</p>
+        </div>
       </div>
       <div class="popup pop3 dis">
         <div class="kvx"></div>
@@ -102,8 +139,19 @@
     <div class="t4">
       <div class="vopros vop4"></div>
       <div class="ochki4"></div>
-      <div class="cena">
+      <div class="cena c4">
         <p class = "cen">100$</p>
+      </div>
+      <div class="cena2 dis ct4">
+        <div class="cena21">
+          <p class = "pcen">-</p>
+        </div>
+        <div class="cena22">
+          <p class = "pcen">1</p>
+        </div>
+        <div class="cena23">
+          <p class = "pcen">+</p>
+        </div>
       </div>
       <div class="popup pop4 dis">
         <div class="kvx"></div>
