--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         left: 0;
         top: 0;
         right: 0;
-        /* background: url('images/g1280.png'); */
+        background: url('images/g768.png');
         background-size: 100% auto;
         background-repeat: no-repeat;
         /* height: 100%; */
-        width: 1280px;
-        height: 1900px;
+        width: 768px;
+        height: 1728px;
         display: block;
         opacity: .5;
       }
