--- a/katalog.html
+++ b/katalog.html
@@ -19,6 +19,12 @@
         $(".vop4").click(function(){
           $(".pop4").toggleClass("dis");
         });
+        $(".vop5").click(function(){
+          $(".pop5").toggleClass("dis");
+        });
+        $(".vop6").click(function(){
+          $(".pop6").toggleClass("dis");
+        });
         $(".cena").click(function(){
           $(this).addClass("dis");
         });
@@ -34,6 +40,12 @@
         $(".c4").click(function(){
           $(".ct4").removeClass("dis");
         });
+        $(".c5").click(function(){
+          $(".ct5").removeClass("dis");
+        });
+        $(".c6").click(function(){
+          $(".ct6").removeClass("dis");
+        });
 
       });
     </script>
@@ -44,11 +56,11 @@
       left: 0;
       top: 0;
       right: 0;
-      /* background: url('images/ka1280.png'); */
+      background: url('images/ka768.png');
       background-size: 100% auto;
       background-repeat: no-repeat;
       /* height: 100%; */
-      width: 1280px;
+      width: 768px;
       height: 1488px;
       display: block;
       opacity: .5;
@@ -157,6 +169,54 @@
         <div class="kvx"></div>
         <div class="kvy">
           <p class = "px">Вместо людей вы&nbsp;видите милых животных</p>
+        </div>
+      </div>
+    </div>
+    <div class="t5">
+      <div class="vopros vop5"></div>
+      <div class="ochki5"></div>
+      <div class="cena c5">
+        <p class = "cen">100$</p>
+      </div>
+      <div class="cena2 dis ct5">
+        <div class="cena21">
+          <p class = "pcen">-</p>
+        </div>
+        <div class="cena22">
+          <p class = "pcen">1</p>
+        </div>
+        <div class="cena23">
+          <p class = "pcen">+</p>
+        </div>
+      </div>
+      <div class="popup pop5 dis">
+        <div class="kvx"></div>
+        <div class="kvy">
+          <p class = "px">Тут описание</p>
+        </div>
+      </div>
+    </div>
+    <div class="t6">
+      <div class="vopros vop4"></div>
+      <div class="ochki6"></div>
+      <div class="cena c6">
+        <p class = "cen">100$</p>
+      </div>
+      <div class="cena2 dis ct6">
+        <div class="cena21">
+          <p class = "pcen">-</p>
+        </div>
+        <div class="cena22">
+          <p class = "pcen">1</p>
+        </div>
+        <div class="cena23">
+          <p class = "pcen">+</p>
+        </div>
+      </div>
+      <div class="popup pop4 dis">
+        <div class="kvx"></div>
+        <div class="kvy">
+          <p class = "px">Описание</p>
         </div>
       </div>
     </div>
