--- a/katalog.html
+++ b/katalog.html
@@ -144,7 +144,7 @@
       <div class="popup pop3 dis">
         <div class="kvx"></div>
         <div class="kvy">
-          <p class = "px">Галлюцинации мотивируютс и&nbsp;вдохновляют вас</p>
+          <p class = "px">Галлюцинации мотивируют и&nbsp;вдохновляют вас</p>
         </div>
       </div>
     </div>
