--- a/kontakti.html
+++ b/kontakti.html
@@ -33,7 +33,7 @@
     <a href="kontakti.html"><p class="p4">контакты</p></a>
     <p class="p5">Контакты</p>
     <div class="karta">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.720151797503!2d37.50424145161926!3d55.67646640524864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54d000beac861%3A0x7e54c0444a6f6058!2z0L_RgC4g0JLQtdGA0L3QsNC00YHQutC-0LPQviwgMznQkSwg0JzQvtGB0LrQstCwLCBNb3Njb3cgT2JsYXN0LCAxMTk0MTU!5e0!3m2!1sru!2sru!4v1622448629826!5m2!1sru!2sru" width="1096" height="434" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe class = "kart" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.720151797503!2d37.50424145161926!3d55.67646640524864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54d000beac861%3A0x7e54c0444a6f6058!2z0L_RgC4g0JLQtdGA0L3QsNC00YHQutC-0LPQviwgMznQkSwg0JzQvtGB0LrQstCwLCBNb3Njb3cgT2JsYXN0LCAxMTk0MTU!5e0!3m2!1sru!2sru!4v1622448629826!5m2!1sru!2sru" width="1096" height="434" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <p class = "p6">МОСКВА<br>Проспект вернадского, 39Б<br>ПН–ВС: 12:00–21:00<br><br>+7 (495) 234-24-44<br>mirage@ochki.ru</p>
   </body>
