--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <a href="afisha.html"><p class="p3">афиша</p></a>
     <a href="kontakti.html"><p class="p4">контакты</p></a>
     <div class="reklama">
+      <div class="text"></div>
       <p class = "p0">Новые очки<br>для занятий спортом</p>
       <p class = "px">Новый вид галлюцинаций, с которым занятия спортом станут интереснее!</p>
     </div>
