--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         left: 0;
         top: 0;
         right: 0;
-        background: url('images/g768.png');
+        /* background: url('images/g768.png'); */
         background-size: 100% auto;
         background-repeat: no-repeat;
         /* height: 100%; */
