--- a/katalog.html
+++ b/katalog.html
@@ -56,7 +56,7 @@
       left: 0;
       top: 0;
       right: 0;
-      background: url('images/ka768.png');
+      /* background: url('images/ka768.png'); */
       background-size: 100% auto;
       background-repeat: no-repeat;
       /* height: 100%; */
