--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <div class="kv2">
       <div class="gal2"></div>
     </div>
+    <div class="strelka"></div>
     <p class = "p8">Создай собственные галлюцинации прямо сейчас!</p>
     <div class="kv3"></div>
     <a href="https://acsel323.github.io/ochki2/"><div class="kv4">
