--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     <a href="katalog.html"><p class="p2">каталог</p></a>
     <a href="afisha.html"><p class="p3">афиша</p></a>
     <a href="kontakti.html"><p class="p4">контакты</p></a>
-    <div class="reklama">
+    <a href="ochki.html"><div class="reklama">
       <div class="text"></div>
       <p class = "p0">Новые очки<br>для занятий спортом</p>
       <p class = "px">Новый вид галлюцинаций, с которым занятия спортом станут интереснее!</p>
-    </div>
+    </div></a>
     <div class="kr1"></div>
     <a href="#s1" class = "s1"><div class="kr2">
       <img src="images/st.png" alt="" class = "img1">
