--- a/kontakti.html
+++ b/kontakti.html
@@ -25,7 +25,7 @@
     </style>
   </head>
   <body>
-    <div class="mirage"></div>
+    <a href="index.html"><div class="mirage"></div></a>
     <div class="kv0"></div>
     <a href="index.html"><p class="p1">главная</p></a>
     <a href="katalog.html"><p class="p2">каталог</p></a>
