--- a/index.html
+++ b/index.html
@@ -39,8 +39,14 @@
         display: block;
         opacity: .5;
       }
-
-
+      @font-face {
+       font-family: 'Montserrat';
+       src: url("fonts/Montserrat-Regular.woff") format('woff');
+      }
+      @font-face {
+       font-family: 'Polonium';
+       src: url("fonts/Polonium.woff") format('woff');
+      }
     </style>
   </head>
   <body>
