--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
        src: url("fonts/Polonium.woff") format('woff');
       }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <a href="index.html"><div class="mirage"></div></a>
