--- a/katalog.html
+++ b/katalog.html
@@ -67,6 +67,7 @@
     }
 
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <a href="index.html"><div class="mirage"></div></a>
