--- a/ochki.html
+++ b/ochki.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheets5/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Главная</title>
+    <title>Очки для спорта</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <a href="index.html"><div class="mirage"></div></a>
