--- a/katalog.html
+++ b/katalog.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="stylesheets2/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Каталог</title>
-    
+
     <script type="text/javascript">
       $(document).ready(function(){
         $(".vop1").click(function(){
@@ -66,7 +66,14 @@
       display: block;
       opacity: .5;
     }
-
+    @font-face {
+     font-family: 'Montserrat';
+     src: url("../fonts/Montserrat-Regular.woff") format('woff');
+    }
+    @font-face {
+     font-family: 'Polonium';
+     src: url("../fonts/Polonium.woff") format('woff');
+    }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
