--- a/kontakti.html
+++ b/kontakti.html
@@ -21,7 +21,14 @@
         display: block;
         opacity: .5;
       }
-
+      @font-face {
+       font-family: 'Montserrat';
+       src: url("fonts/Montserrat-Regular.woff") format('woff');
+      }
+      @font-face {
+       font-family: 'Polonium';
+       src: url("fonts/Polonium.woff") format('woff');
+      }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
