--- a/ochki.html
+++ b/ochki.html
@@ -7,6 +7,16 @@
     <title>Очки для спорта</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
+  <style media="screen">
+    @font-face {
+     font-family: 'Montserrat';
+     src: url("fonts/Montserrat-Regular.woff") format('woff');
+    }
+    @font-face {
+     font-family: 'Polonium';
+     src: url("fonts/Polonium.woff") format('woff');
+    }
+  </style>
   <body>
     <a href="index.html"><div class="mirage"></div></a>
     <div class="kv0"></div>
