--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <a href="katalog.html"><p class="p2">каталог</p></a>
     <a href="afisha.html"><p class="p3">афиша</p></a>
     <a href="kontakti.html"><p class="p4">контакты</p></a>
-    <a href="ochki.html"><div class="reklama">
+    <a href="ochki.html"><div class="reklama png svg">
       <div class="text"></div>
       <p class = "p0">Новые очки<br>для занятий спортом</p>
       <p class = "px">Новый вид галлюцинаций, с которым занятия спортом станут интереснее!</p>
