--- a/ochki.html
+++ b/ochki.html
@@ -24,5 +24,10 @@
     <a href="katalog.html"><p class="p2">каталог</p></a>
     <a href="afisha.html"><p class="p3">афиша</p></a>
     <a href="kontakti.html"><p class="p4">контакты</p></a>
+    <div class="kv1">
+      <div class="img1"></div>
+    </div>
+    <p class = "px">Галлюцинирующие очки для занятий спортом</p>
+    <p class = "py">Галлюцинации добавляют энергию.<br>С&nbsp;такими очками легче заниматься спортом</p>
   </body>
 </html>
