--- a/afisha.html
+++ b/afisha.html
@@ -53,9 +53,9 @@
     <div class="kv3"></div>
     <div class="kv4"><p class = "p6">Выставка очков<br>«‎‎Живые галлюцинации»</p></div>
     <div class="pl9"><iframe src="https://player.vimeo.com/video/493105284" width="454" height="681" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/493105284"></p></div>
-    <div class="pl10"></div>
+<p><a href="https://vimeo.com/493105284"></a> </p></div>
     <div class="kv5"></div>
+    <div class="pl10"></div>
     <div class="kv6"><p class = "p6">Бредовые видения,<br>миражи, причуды,<br>глюки, призраки</p></div>
     <div class="kv7"></div>
     <div class="kv8"><p class = "p6">Лекция о создании галлюцинирующих очков!<br>Вы увидите галлюцинации первых очков</p></div>
