--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     <a href="katalog.html"><p class="p2">каталог</p></a>
     <a href="afisha.html"><p class="p3">афиша</p></a>
     <a href="kontakti.html"><p class="p4">контакты</p></a>
-    <a href="ochki.html" class = "a1"><div class="reklama">
+    <div class="reklama">
       <div class="text"></div>
       <p class = "p0">Новые очки<br>для занятий спортом</p>
       <p class = "px">Новый вид галлюцинаций, с которым занятия спортом станут интереснее!</p>
-    </div></a>
+    </div>
     <div class="kr1"></div>
     <a href="#s1" class = "s1"><div class="kr2">
       <img src="images/st.png" alt="" class = "img1">
@@ -71,14 +71,14 @@
 и&nbsp;окунуться в&nbsp;совершенно новый мир! Вы&nbsp;можете выбрать себе очки
 с&nbsp;определенными видами галлюцинаций. Очки помогают справится
 с&nbsp;трудностями и&nbsp;сделать жизнь проще.</p>
-    <p class = "p7">От создания галлюцинаций до новых очков</p>
+    <!-- <p class = "p7">От создания галлюцинаций до новых очков</p>
     <div class="kv1">
       <div class="gal1"></div>
     </div>
     <div class="kv2">
       <div class="gal2"></div>
     </div>
-    <div class="strelka"></div>
+    <div class="strelka"></div> -->
     <p class = "p8">Создай собственные галлюцинации прямо сейчас!</p>
     <div class="kv3"></div>
     <a href="https://acsel323.github.io/ochki2/"><div class="kv4">
