--- a/kontakti.html
+++ b/kontakti.html
@@ -7,7 +7,7 @@
     <title>Контакты</title>
     <style media="screen">
       body::before {
-        content: "";
+        /* content: ""; */
         position: absolute;
         left: 0;
         top: 0;
