--- a/afisha.html
+++ b/afisha.html
@@ -7,7 +7,7 @@
     <title>Афиша</title>
     <style media="screen">
       body::before {
-        content: "";
+        /* content: ""; */
         position: absolute;
         left: 0;
         top: 0;
