--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
       body::before {
-        content: "";
+        /* content: ""; */
         position: absolute;
         left: 0;
         top: 0;
