--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="stylesheets1/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Главная</title>
@@ -69,7 +70,7 @@
     <p class="p5" id="s1">Как работают очки</p>
     <p class="p6">Через очки вы&nbsp;можете видеть различные галлюцинации, как&nbsp;зрительные, так&nbsp;слуховые и&nbsp;обонятельные. Очки помогут отвлечься от&nbsp;скучной жизни
 и&nbsp;окунуться в&nbsp;совершенно новый мир! Вы&nbsp;можете выбрать себе очки
-с&nbsp;определенными видами галлюцинаций. Очки помогают справится
+с&nbsp;определенными видами галлюцинаций. Очки&nbspпомогают справится
 с&nbsp;трудностями и&nbsp;сделать жизнь проще.</p>
     <!-- <p class = "p7">От создания галлюцинаций до новых очков</p>
     <div class="kv1">
@@ -79,7 +80,7 @@
       <div class="gal2"></div>
     </div>
     <div class="strelka"></div> -->
-    <p class = "p8">Создай собственные галлюцинации прямо сейчас!</p>
+    <p class = "p8">Создайте неповторимые очки<br>и&nbsp;соберите для них галлюцинации</p>
     <div class="kv3"></div>
     <a href="https://acsel323.github.io/ochki2/"><div class="kv4">
       <p class = "p9">Создать</p>
