--- a/katalog.html
+++ b/katalog.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="stylesheets2/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Каталог</title>
@@ -65,7 +66,7 @@
       left: 0;
       top: 0;
       right: 0;
-      /* background: url('images/ka768.png'); */
+      background: url('images/ka414.png');
       background-size: 100% auto;
       background-repeat: no-repeat;
       /* height: 100%; */
